main activity layout clean up

--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -19,6 +19,11 @@
 
     <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
 
+            <!-- Customize your theme here. -->
+            <item name="colorPrimary">@color/theme_primary</item>
+            <item name="colorPrimaryDark">@color/theme_primary_dark</item>
+            <item name="colorAccent">@color/theme_accent</item>
+
     </style>
 
     <style name="Theme.Bacon.Detail">
