--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,15 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
+   <!-- <color name="theme_primary">#066b21</color>
+    <color name="theme_primary_dark">#034e2c</color>
     <color name="theme_accent">#04561A</color>
+    <color name="ltgray">#ffe0e0e0</color>-->
+
+    <color name="theme_primary">#4CAF50</color>
+    <color name="theme_primary_dark">#388E3C</color>
+    <color name="theme_primary_light">#C8E6C9</color>
+    <color name="theme_accent">#FFC107</color>
     <color name="ltgray">#ffe0e0e0</color>
+
 </resources>
