--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -27,6 +27,6 @@
     <color name="theme_primary_dark">#388E3C</color>
     <color name="theme_primary_light">#C8E6C9</color>
     <color name="theme_accent">#FFC107</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="ltgray">#cecaca</color>
 
 </resources>
