--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -20,6 +20,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/photo_placeholder"
+            android:scaleType="centerCrop"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,10 +42,11 @@
                 android:paddingTop="16dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="4dp"
-                android:textColor="#6000"
+                android:textColor="#9000"
                 android:ellipsize="end"
                 android:maxLines="4"
                 android:text="14sp"
+                android:textStyle="bold"
                 />
 
             <TextView
@@ -49,22 +57,13 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingBottom="16dp"
-                android:textColor="@color/ltgray"
+                android:textColor="#7000"
                 android:maxLines="2"
                 android:ellipsize="end"
                 android:text="14sp"
                 />
 
         </LinearLayout>
-
-        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/photo_placeholder"
-            android:scaleType="centerCrop"
-            />
-
 
     </LinearLayout>
 
