fixed floating action bar translation

--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
-        android:translationZ="6dp"
+        app:pressedTranslationZ="6dp"
         android:contentDescription="@string/action_share"
         />
 
